tests/nullable/nullable.exp
Error ------------------------------------------------------------- error.js:8:8

Error: error.js:8
  8: ((any: ?number): number);
            ^^^^^^^ Cannot cast `any` to number because null or undefined [1] is incompatible with number [2].
  References:
    8: ((any: ?number): number);
              ^^^^^^^ [1]: null or undefined
    8: ((any: ?number): number);
                        ^^^^^^ [2]: number

Error ------------------------------------------------------------- error.js:9:8

Error: error.js:9
  9: ((any: ?number): null);
            ^^^^^^^ Cannot cast `any` to null because null or undefined [1] is incompatible with null [2].
  References:
    9: ((any: ?number): null);
              ^^^^^^^ [1]: null or undefined
    9: ((any: ?number): null);
                        ^^^^ [2]: null

Error ------------------------------------------------------------- error.js:9:9

Error: error.js:9
  9: ((any: ?number): null);
             ^^^^^^ Cannot cast `any` to null because number [1] is incompatible with null [2].
  References:
    9: ((any: ?number): null);
               ^^^^^^ [1]: number
    9: ((any: ?number): null);
                        ^^^^ [2]: null

Error ------------------------------------------------------------ error.js:10:8

Error: error.js:10
 10: ((any: ?number): void);
            ^^^^^^^ Cannot cast `any` to undefined because null or undefined [1] is incompatible with undefined [2].
  References:
   10: ((any: ?number): void);
              ^^^^^^^ [1]: null or undefined
   10: ((any: ?number): void);
                        ^^^^ [2]: undefined

Error ------------------------------------------------------------ error.js:10:9

Error: error.js:10
 10: ((any: ?number): void);
             ^^^^^^ Cannot cast `any` to undefined because number [1] is incompatible with undefined [2].
  References:
   10: ((any: ?number): void);
               ^^^^^^ [1]: number
   10: ((any: ?number): void);
                        ^^^^ [2]: undefined

Error: error.js:16
 16: ((any: ?number): number | null);
            ^^^^^^^ null or undefined. This type is incompatible with
 16: ((any: ?number): number | null);
                      ^^^^^^^^^^^^^ union: number | null
  Member 1:
   16: ((any: ?number): number | null);
                        ^^^^^^ number
  Error:
   16: ((any: ?number): number | null);
              ^^^^^^^ null or undefined. This type is incompatible with
   16: ((any: ?number): number | null);
                        ^^^^^^ number
  Member 2:
   16: ((any: ?number): number | null);
                                 ^^^^ null
  Error:
   16: ((any: ?number): number | null);
              ^^^^^^^ null or undefined. This type is incompatible with
   16: ((any: ?number): number | null);
                                 ^^^^ null

Error: error.js:17
 17: ((any: ?number): number | void);
            ^^^^^^^ null or undefined. This type is incompatible with
 17: ((any: ?number): number | void);
                      ^^^^^^^^^^^^^ union: number | undefined
  Member 1:
   17: ((any: ?number): number | void);
                        ^^^^^^ number
  Error:
   17: ((any: ?number): number | void);
              ^^^^^^^ null or undefined. This type is incompatible with
   17: ((any: ?number): number | void);
                        ^^^^^^ number
  Member 2:
   17: ((any: ?number): number | void);
                                 ^^^^ undefined
  Error:
   17: ((any: ?number): number | void);
              ^^^^^^^ null or undefined. This type is incompatible with
   17: ((any: ?number): number | void);
                                 ^^^^ undefined

Error ------------------------------------------------------------ maybe.js:5:11

Error: maybe.js:5
  5: ((123: ?(?number)): ?string); // error (only num ~> string)
               ^^^^^^ Cannot cast `123` to nullable string because number [1] is incompatible with string [2].
  References:
    5: ((123: ?(?number)): ?string); // error (only num ~> string)
                 ^^^^^^ [1]: number
    5: ((123: ?(?number)): ?string); // error (only num ~> string)
                            ^^^^^^ [2]: string

Error --------------------------------------------------------- nullable.js:1:32

Error: nullable.js:1
  1: function foo():string { return null; }
                                    ^^^^ Cannot return `null` because null [1] is incompatible with string [2].
  References:
    1: function foo():string { return null; }
                                      ^^^^ [1]: null
    1: function foo():string { return null; }
                      ^^^^^^ [2]: string

Error -------------------------------------------------------- nullable.js:11:22

Error: nullable.js:11
 11: if (x != null) corge(x); // x: ?string | null
                          ^ Cannot call `corge` with `x` bound to `x` because string [1] is incompatible with number [2].
  References:
    3: function bar():?string { return null; }
                       ^^^^^^ [1]: string
    7: function corge(x:number) { }
                        ^^^^^^ [2]: number

Error -------------------------------------------------------- nullable.js:15:17

Error: nullable.js:15
 15:   grault(); qux(x);
                     ^ Cannot call `qux` with `x` bound to `x` because null [1] is incompatible with string [2].
  References:
   13: function grault() { x = null; }
                               ^^^^ [1]: null
    5: function qux(x:string) { }
                      ^^^^^^ [2]: string

Error -------------------------------------------------------- nullable.js:15:17

Error: nullable.js:15
 15:   grault(); qux(x);
                     ^ Cannot call `qux` with `x` bound to `x` because null or undefined [1] is incompatible with string [2].
  References:
    3: function bar():?string { return null; }
                      ^^^^^^^ [1]: null or undefined
    5: function qux(x:string) { }
                      ^^^^^^ [2]: string

Error --------------------------------------------------- simple_nullable.js:4:5

Error: simple_nullable.js:4
  4: bar('hmm');
         ^^^^^ Cannot call `bar` with `'hmm'` bound to `x` because string [1] is incompatible with number [2].
  References:
    4: bar('hmm');
           ^^^^^ [1]: string
    2: function bar(x:?number) {}
                       ^^^^^^ [2]: number


Found 13 errors
